# redisdb

./: .gitignore  Taskfile.yaml  pyproject.toml
redisdb/: interface.py
tests/: conftest.py  test_interface.py
