[tool.poetry]
name = "redisdb"
version = "0.1.0"
description = ""
authors = ["Elijah Wilson <eli@noteable.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^4.5.5"
pydantic = "^1.10.8"
pytest-asyncio = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
